@@ -20,6 +20,30 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|net
+operator|.
+name|ServerSocketUtil
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|junit
@@ -90,53 +114,21 @@ specifier|public
 name|void
 name|initializeJerseyPort
 parameter_list|()
+throws|throws
+name|IOException
 block|{
 name|int
 name|jerseyPort
 init|=
+name|ServerSocketUtil
+operator|.
+name|getPort
+argument_list|(
 literal|9998
-decl_stmt|;
-name|String
-name|port
-init|=
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"jersey.test.port"
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-literal|null
-operator|!=
-name|port
-condition|)
-block|{
-name|jerseyPort
-operator|=
-name|Integer
-operator|.
-name|parseInt
-argument_list|(
-name|port
-argument_list|)
-operator|+
+argument_list|,
 literal|10
-expr_stmt|;
-if|if
-condition|(
-name|jerseyPort
-operator|>
-literal|65535
-condition|)
-block|{
-name|jerseyPort
-operator|=
-literal|9998
-expr_stmt|;
-block|}
-block|}
+argument_list|)
+decl_stmt|;
 name|System
 operator|.
 name|setProperty
